force-app/main/default/objects/SMS_Late_Fee_History__c/SMS_Late_Fee_History__c.object-meta.xml
<CustomObject>
    <label>SMS Late Fees History</label>
    <nameField>
        <displayFormat>LFH-{000000000}</displayFormat>
        <label>SMS Late Fee History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Late Fees History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>