force-app/main/default/objects/SMS_Late_Fee_History__c/fields/Billing_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Billing_Jurisdiction__c</fullName>
    <label>Billing Jurisdiction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>