force-app/main/default/objects/SMS_Late_Fee_History__c/fields/Contact_Private_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Private_Email__c</fullName>
    <label>Contact Private Email</label>
    <type>Email</type>
</CustomField>