force-app/main/default/objects/SMS_Late_Fee_History__c/fields/Day_of_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Assessment__c</fullName>
    <label>Day of Assessment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>