force-app/main/default/objects/SMS_Late_Fee_History__c/fields/Late_Fees_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Late_Fees_Batch_ID__c</fullName>
    <label>Late Fees Batch ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>