force-app/main/default/objects/SMS_Late_Fee_History__c/fields/Service_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Service_Jurisdiction__c</fullName>
    <label>Service Jurisdiction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>