force-app/main/default/objects/SMS_Late_Fee_History__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <label>Subscription ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>