force-app/main/default/objects/SMS_Late_Fee_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Late_Fees_Batch_ID__c</columns>
    <columns>Subscription_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Service_Jurisdiction__c</columns>
    <columns>Billing_Jurisdiction__c</columns>
    <columns>Date_of_Assessment__c</columns>
    <columns>Day_of_Assessment__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Status_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>